validation_2.log
C:\Spare Parts\Project\node_modules\ts-node\src\index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: Ô¿» Unable to compile TypeScript:
src/accounting/accounting.service.ts(125,52): error TS2345: Argument of type '{ date: Date; reference: string; description?: string; lines: { accountId: string; debit: number; credit: number; description?: string; }[]; }' is not assignable to parameter of type '{ date: Date; reference: string; description?: string; lines: { accountCode: string; debit: number; credit: number; description?: string; }[]; }'.
  Types of property 'lines' are incompatible.
    Type '{ accountId: string; debit: number; credit: number; description?: string; }[]' is not assignable to type '{ accountCode: string; debit: number; credit: number; description?: string; }[]'.
      Property 'accountCode' is missing in type '{ accountId: string; debit: number; credit: number; description?: string; }' but required in type '{ accountCode: string; debit: number; credit: number; description?: string; }'.

    at createTSError (C:\Spare Parts\Project\node_modules\ts-node\src\index.ts:859:12)
    at reportTSError (C:\Spare Parts\Project\node_modules\ts-node\src\index.ts:863:19)
    at getOutput (C:\Spare Parts\Project\node_modules\ts-node\src\index.ts:1077:36)
    at Object.compile (C:\Spare Parts\Project\node_modules\ts-node\src\index.ts:1433:41)
    at Module.m._compile (C:\Spare Parts\Project\node_modules\ts-node\src\index.ts:1617:30)
    at node:internal/modules/cjs/loader:1893:10
    at Object.require.extensions.<computed> [as .ts] (C:\Spare Parts\Project\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1481:32)
    at Module._load (node:internal/modules/cjs/loader:1300:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14) {
  diagnosticCodes: [ 2345 ]
}
